0.2.2
Fixed minor sensitive bug when closing tab.
If documentation doesn't exist when selecting 'Show Documentaion' from the 'View' menu it is now built.
Fixed bookmarks not being removed from closed tab.
Nag screen now only every month.
Added check for update every month.
Added '-s' switch ( safe ) to disable loading of ALL plugins for this session implies '-m'.
Fixed regex for 'Open' from tab popup not showing some files.
~/.KKEdit/plugins now searched first for plugins, ( ie local plugs take precedence over global plugs ).
Plugins now checked for duplicate names on load, only first instance loaded.
Plugins now loaded alphabetically.
If two or more plugins use a left/right pane pane wont be closed until all plugins close it.
Added expander handles to left and right user boxes.
Code Clean
About and/or Preferences in plugin prefs dialog now dimmed if not available in the plugin.

0.2.1
Updated plugin help.
Pointed various links to new website.
Fixed a few small compile bugs when not using the built in docviewer.
Hidden all symbols from plugins except what they need to access.
Updated plugin help and commented example plugin source file.
Plugin prefs dialog now stays open until manually closed.
Added top and bottom label to the demo plugin.
Plugins can now send output to the tool output window.
Added textbuffer of tool output pane for plugin use.
Added Hide/Show tooloutput for plugin use.
Tool output pane height now saved at exit.
Added menu 'Get Plugins' to 'Help' menu to get more plugins from my website.
Changed some plugin interface names so its less confusing.
Added top,left,right and bottom user vboxs to main window for use in plugins.
Changed the build for the barber pole  as a fix for ubuntu 12.04.
Down graded the required version of gmodule as a fix for ubuntu 12.04.
Path to KKEdit's temp folder now passed to plugins.
Added about box to example plugin.
Added plugin icon.
Plugins can now be enabled/disabled without restart.

0.2.0